kubernetes/cart/cart-blue-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
      version: blue
  template:
    metadata:
      labels:
        app: cart
        version: blue
    spec:
      containers:
      - name: cart
        image: teufelz/bookstore-cart:latest
        ports:
        - containerPort: 5002
        livenessProbe:
          httpGet:
            path: /api/liveness
            port: 5002
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3 
        readinessProbe:
          httpGet:
            path: /api/health
            port: 5002
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
