kubernetes/cart/cart-green-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cart
      version: green
  template:
    metadata:
      labels:
        app: cart
        version: green
    spec:
      containers:
      - name: cart
        image: teufelz/bookstore-cart:latest
        ports:
        - containerPort: 5002
        livenessProbe:
          httpGet:
            path: /api/liveness
            port: 5002
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3 
        readinessProbe:
          httpGet:
            path: /api/health
            port: 5002
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
